# elnclient

./: .gitignore  README.md  pyproject.toml  testing.py
Data/: scialog_1.yaml
Data/oemu_results/2025-11-21_16-51-53/carrier_ 1/substrate_1/step_1/UV-Vis/: spectrum_data.csv
Data/oemu_results/2026-04-30_16-07-14/carrier_ 1/substrate_1/step_1/UV-Vis/: spectrum_data.csv
Data/oemu_results/2026-04-30_16-07-14/carrier_ 1/substrate_2/step_1/UV-Vis/: spectrum_data.csv
Data/oemu_results/2026-04-30_16-07-14/carrier_ 1/substrate_3/step_1/UV-Vis/: spectrum_data.csv
elnclient/: __init__.py  client.py
