[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elnclient"
version = "0.1.0"
description = "Lightweight client for creating and managing experiments on the ddomlab ELN"
authors = [{name = "Addison"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest"]